# astrosor

./: README.md  pyproject.toml
src/astrosor/: __init__.py  coverage.py  example_coverage_analysis.py  exclusion.py  frames.py  gap.py  moon.py  orbits.py  satellite.py  scheduler.py  sensor.py  sun.py  tle.py  utils.py  vector.py
src/astrosor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: compare_propagators.py  test_astrosor.py
